--- a/index.html
+++ b/index.html
@@ -2,50 +2,63 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <script defer src="./script.js"></script>
+  <link rel="stylesheet" href="./styles.css">
   <title>Frontend Mentor | Interactive card details form</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+<div id="card-front">
+  <img id="card-front-img" src="./images/bg-card-front.png" alt="">
+  <div id="card-front-display">
+    <img src="./images/card-logo.svg" alt="">
+    <div id="number-display">
+      <span class="segment"></span>
+      <span class="segment"></span>
+      <span class="segment"></span>
+      <span class="segment"></span>
+    </div>
+    <div class="name-month-wrapper">
+      <div id="name-display"></div>
+      <p id="date-display">
+        <span id="month-display">00</span>
+        /
+        <span id="year-display">00</span>
+      </p>
+    </div>
+  </div>
+</div>
+<form action="" class="form">
+  <div class="name-input form-control">
+    <label for="name-input">Cardholder Name</label>
+    <input type="text" id="name-input" name="name" placeholder="e.g. Jane Appleseed">
+  </div>
+  <div class="number-input form-control">
+    <label for="number-input">Card Number</label>
+    <input type="text" id="number-input" name="number" placeholder="e.g. 1234 5678 9123 0000">
+  </div>
+  <fieldset class="date-input form-control">
+    <legend>Exp. Date (MM/YY)</legend>
+    <input type="text" id="month-input" name="month" placeholder="MM">
+    <input type="text" id="year-input" name="year" placeholder="YY">
+  </fieldset>
+  <div class="cvv-input form-control">
+    <label for="cvv-input">CVC</label>
+    <input type="text" id="cvv-input" name="cvv" placeholder="e.g. 123">
+  </div>
+  <button class="confirm-btn">Confirm</button>
+</form>
 
-  0000 0000 0000 0000
-  Jane Appleseed
-  00/00
-
-  000
-
-  Cardholder Name
-  e.g. Jane Appleseed
-
-  Card Number
-  e.g. 1234 5678 9123 0000
-
-  Exp. Date (MM/YY)
-  MM
-  YY
-
-  CVC
-  e.g. 123
-
-  Confirm
-
-  <!-- Completed state start -->
-
+<div class="hidden">
   Thank you!
   We've added your card details
   Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+</div>
+
+
 </body>
 </html>
